fix spacing for top of card pool in right side

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,6 @@
   width: 30%;
   top: 5%;
   z-index: 0;
-  margin-top: 15px;
 }
 
 #topbar{
@@ -124,4 +123,8 @@ table{
 
 .White.Red, .White.Green, .Blue.Red, .Blue.Green, .White.Black, .Black.Green, .Black.Red, .Blue.Black, .Black.Red, .Red.Green, .White.Blue{
   color: #FFD700;
+}
+
+h3{
+  margin-top: 20px;
 }
